add common use component and db json for data store

--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -1,9 +1,13 @@
 
 
-<div class="container">
+<div>
   <p>
     <i class="fa fa-home"></i> &nbsp; home works!
   </p>
+
+
+  <br><br>
+  <button class="btn-primary" (click)="onPost()">Post</button>
 
   <br><br>
   <ng-select style="width: 31%;" [items]="dropdownList"
