--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -4,7 +4,7 @@
     <app-side-bar></app-side-bar>
 </section>
 
-<div class="container" style="margin-left:17%">
+<div class="container" style="margin-left:17%;margin-top: 80px;">
     <router-outlet></router-outlet>
 </div>
 
