--- a/src/app/common/share-components/side-bar/side-bar.component.html
+++ b/src/app/common/share-components/side-bar/side-bar.component.html
@@ -4,70 +4,27 @@ border-color: #e7e7e7;">
     <a routerLink="home" [routerLinkActive]="['router-link-active']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;Dashboard
     </a>
-    <a routerLink="home" [routerLinkActive]="['router-link-active']" class="list-group-item">
+    <a  [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']" class="list-group-item">
       <i class="fa fa-calendar"></i>&nbsp;Calender
     </a>
-    <a routerLink="home" [routerLinkActive]="['router-link-active']" class="list-group-item">
+    <a  [routerLink]="['/select-dropdown']" [routerLinkActive]="['router-link-active']" class="list-group-item">
       <i class="fa fa-caret-down"></i>&nbsp;Select Dropdown
     </a>
 
-    <a routerLink="home" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-fw fa-dashboard"></i>&nbsp;Caraousel
+    <a  [routerLink]="['/carousel']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;Carousel
     </a>
 
-    <a routerLink="home" [routerLinkActive]="['router-link-active']" class="list-group-item">
+    <a  [routerLink]="['/file-upload']" [routerLinkActive]="['router-link-active']" class="list-group-item">
       <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;File uploading
     </a> 
-    <!-- <a [routerLink]="['/lifeguard/vendors']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-users"></i>&nbsp;Vendor
+
+    <a  [routerLink]="['/reactive-form']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-wpforms" aria-hidden="true"></i>&nbsp;Reactive Form
+    </a> 
+     <a [routerLink]="['/datatable']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-table" aria-hidden="true"></i>&nbsp;Data table
     </a>
-    <a [routerLink]="['/lifeguard/devices']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-hdd-o"></i>&nbsp;Inventory
-    </a>
-    <a [routerLink]="['/lifeguard/users']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-user"></i>&nbsp;Users
-    </a>
-    <a [routerLink]="['/lifeguard/companies']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-adn"></i>&nbsp;Company
-    </a>
-    <a [routerLink]="['/lifeguard/offices']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-building"></i>&nbsp;Office
-    </a>
-    <a [routerLink]="['/lifeguard/zones']" [routerLinkActive]="['router-link-active']"
-    class="list-group-item"
-   >
-      <i class="fa fa-th-large"></i>&nbsp;Zone
-    </a>
-    <a [routerLink]="['/lifeguard/company_devices']" [routerLinkActive]="['router-link-active']" class="list-group-item" >
-      <i class="fa fa-tasks"></i>&nbsp;Assign Device
-    </a>
-    <a [routerLink]="['/lifeguard/locks']" [routerLinkActive]="['router-link-active']"
-    class="list-group-item"
-    >
-      <i class="fa fa-lock"></i>&nbsp;Lock
-    </a>
-    <div class="nested-menu" >
-      <a class="list-group-item" (click)="addExpandClass('pages')">
-        <span><i class="fa fa-address-card"></i>&nbsp;Employee</span>
-      </a>
-      <li class="nested">
-          <ul class="submenu">
-            <li >
-              <a [routerLink]="['/lifeguard/device-users']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                <i class="fa fa-user-plus"></i>&nbsp;Device User
-              </a>
-            </li>
-            <li>
-              <a [routerLink]="['/lifeguard/enrollment-configurations/new']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                <i class="fa fa-plus"></i>&nbsp;Enroll Employee
-              </a>
-            </li>
-          </ul>
-        </li>
-    </div>
-    <a [routerLink]="['/lifeguard/door/unlock']" [routerLinkActive]="['router-link-active']" class="list-group-item" >
-      <i class="fa fa-unlock"></i>&nbsp;Manage Door
-    </a> -->
 
   </div>
 </nav>
