--- a/src/app/common/share-components/nav-bar/nav-bar.component.html
+++ b/src/app/common/share-components/nav-bar/nav-bar.component.html
@@ -6,23 +6,13 @@ border-color: #e7e7e7;">
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
     </button>
     <div class="collapse navbar-collapse">
-        <!-- <div class="col-md-3">
-            <angular2-multiselect
-                [data]="companyList"
-                [(ngModel)]="selectedCompany"
-                [settings]="companyDropdownSettings"
-                (onSelect)="onCompanySelect($event)"
-                (onDeSelect)="OnCompanyDeSelect($event)"
-                *hasPermission="{roles: ['Super Admin', 'System Admin']}"
-            ></angular2-multiselect>
-        </div> -->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" dropdown>
                 <a href="javascript:;" class="dropdown-toggle"
                 aria-controls="dropdown-basic" dropdownToggle>
                     <i class="fa fa-user"></i> Admin<b class="caret"></b>
                 </a>
-                <div class="dropdown-menu-right"id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                <div class="dropdown-menu-right"id="dropdown-basic" *dropdownMenu class="dropdown-menu" style="margin-left:-72px"
                 role="menu" aria-labelledby="button-basic">
                     <a class="dropdown-item" routerLink="/lifeguard/profile/edit">
                         <i class="fa fa-fw fa-user"></i> {{ 'Profile' }}
