--- a/src/app/common/components/data-table/data-table.component.html
+++ b/src/app/common/components/data-table/data-table.component.html
@@ -1,56 +1,35 @@
 <p>
   data-table
 </p>
+
+<label>Search : </label>
+<input style="width: 55%;margin: 3%;" [(ngModel)]="searchText" placeholder="group name here">
 <table class="table table-striped" [mfData]="comments" #mf="mfDataTable" [mfRowsOnPage]="5">
     <thead>
-    <tr>
-        <th style="width: 30%">
-            <mfDefaultSorter by="id">ID</mfDefaultSorter>
-        </th>
-        <th style="width: 20%">
-            <mfDefaultSorter by="body">Body</mfDefaultSorter>
-        </th>
-        <th style="width: 30%">
-            <mfDefaultSorter by="postId">Post Id</mfDefaultSorter>
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of comments">
-        <td>{{item.id}}</td>
-        <td>{{item.body}}</td>
-        <td class="text-right">{{item.postId}}</td>
-    </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-        <td colspan="4">
-            <mfBootstrapPaginator [rowsOnPageSet]="[5,10,25]"></mfBootstrapPaginator>
-        </td>
-    </tr>
-    </tfoot>
+        <tr>
+            <th style="width: 30%">
+                <mfDefaultSorter by="id">id</mfDefaultSorter>
+            </th>
+            <th style="width: 30%">
+                <mfDefaultSorter by="body">body</mfDefaultSorter>
+            </th>
+            <th style="width: 30%">
+                <mfDefaultSorter by="postId">postId</mfDefaultSorter>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let comment of mf.data| filter : searchText">
+                <td style="width: 30%">{{comment.id}}</td>
+                <td style="width: 30%">{{comment.body }} {{comment.comment}}</td>
+                <td style="width: 30%">{{comment.postId}}</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4">
+                    <mfBootstrapPaginator [rowsOnPageSet]="[5,10,25]"></mfBootstrapPaginator>
+                </td>
+            </tr>
+        </tfoot>
 </table>
-
-<!-- <table id="example" class="table table-striped table-bordered" style="width:100%">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Body</th>
-            <th>Post Id</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of comments">
-            <td>{{item.id}}</td>
-            <td>{{item.body}}</td>
-            <td class="text-right">{{item.postId}}</td>
-        </tr>
-        
-    <tfoot>
-        <tr>
-            <th>Id</th>
-            <th>Body</th>
-            <th>Post Id</th>
-        </tr>
-    </tfoot>
-</table> -->
