Added safe pipe and cropper component

--- a/src/app/common/share-components/side-bar/side-bar.component.html
+++ b/src/app/common/share-components/side-bar/side-bar.component.html
@@ -15,8 +15,12 @@ border-color: #e7e7e7;">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;Carousel
     </a>
 
-    <a  [routerLink]="['/file-upload']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-      <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;File uploading
+    <a  [routerLink]="['/image-upload']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;Image upload
+    </a> 
+
+    <a  [routerLink]="['/image-cropper']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-object-ungroup" aria-hidden="true"></i> &nbsp;Image cropper
     </a> 
 
     <a  [routerLink]="['/reactive-form']" [routerLinkActive]="['router-link-active']" class="list-group-item">
