--- a/src/app/common/components/file-upload/file-upload.component.html
+++ b/src/app/common/components/file-upload/file-upload.component.html
@@ -8,21 +8,10 @@
       [resetUpload]=resetVar
       (ApiResponse)="DocUpload($event)">
 </angular-file-uploader>
-<br><br>
 
-<input type="file" (change)="fileChangeEvent($event)" />
-
-<image-cropper
-    [imageChangedEvent]="imageChangedEvent"
-    [maintainAspectRatio]="true"
-    [aspectRatio]="4 / 3"
-    [resizeToWidth]="128"
-    format="png"
-    (imageCroppedBase64)="imageCropped($event)"
-    (imageLoaded)="imageLoaded()"
-    (loadImageFailed)="loadImageFailed()"
-></image-cropper>
-
-<img [src]="croppedImage" />
 
 <br><br>
+
+<input type="file" (change)="fileEvent($event)">
+<br><br>
+<img *ngIf="!!base64textString" width="200" height="200" class="uploadPhotoBx default" [src]="'data:image/jpg;base64,' + base64textString | safe">
