--- a/src/app/common/components/image-cropper/image-cropper.component.html
+++ b/src/app/common/components/image-cropper/image-cropper.component.html
@@ -1,3 +1,18 @@
 <p>
   image-cropper works!
 </p>
+
+<input type="file" (change)="fileChangeEvent($event)" />
+
+<image-cropper  width="300" heigth="300"
+    [imageChangedEvent]="imageChangedEvent"
+    [maintainAspectRatio]="true"
+    [aspectRatio]="4 / 3"
+    [resizeToWidth]="128"
+    format="png"
+    (imageCroppedBase64)="imageCropped($event)"
+    (imageLoaded)="imageLoaded()"
+    (loadImageFailed)="loadImageFailed()"
+></image-cropper>
+
+<img [src]="croppedImage" />
