added high chart and d3 ghraph component

--- a/src/app/common/share-components/nav-bar/nav-bar.component.html
+++ b/src/app/common/share-components/nav-bar/nav-bar.component.html
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #f8f8f8;
-border-color: #e7e7e7;">
-    <a class="navbar-brand capitalize" routerLink="/">Theme </a>
+<nav class="navbar navbar-expand-lg fixed-top" >
+    <a class="navbar-brand capitalize white-text" routerLink="/">Theme </a>
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <!-- <span class="navbar-toggler-icon"></span> -->
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
@@ -8,7 +7,7 @@ border-color: #e7e7e7;">
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" dropdown>
-                <a href="javascript:;" class="dropdown-toggle"
+                <a href="javascript:;"  class=" white-text dropdown-toggle"
                 aria-controls="dropdown-basic" dropdownToggle>
                     <i class="fa fa-user"></i> Admin<b class="caret"></b>
                 </a>
