--- a/src/app/common/share-components/nav-bar/nav-bar.component.scss
+++ b/src/app/common/share-components/nav-bar/nav-bar.component.scss
@@ -37,5 +37,10 @@ $topnav-background-color: #222;
     }
 }
 a{
-    color: #337ab7 !important;
+    color: #337ab7;
 }
+.white-text{
+    color: white !important;
+}
+
+
