--- a/src/app/common/home/home.component.css
+++ b/src/app/common/home/home.component.css
@@ -61,3 +61,9 @@ ul ul a {
     padding-left: 30px !important;
     background: #6d7fcc;
 }
+
+
+table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTable thead .sorting_desc, table.dataTable thead .sorting_asc_disabled, table.dataTable thead .sorting_desc_disabled {
+    cursor: pointer;
+    /* position: relative; */
+}
