--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -69,21 +69,89 @@
 
   <button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
 <br><br>
-<!-- <datatable (rowSelected)="onRowSelected($event)"></datatable> -->
-<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-  <thead>
-  <tr>
-    <th>First name</th>
-    <th>Last name</th>
-  </tr>
-  </thead>
-   <tbody>
-  <tr *ngFor="let row of data; let i = index">
-    <td>{{row.name}}</td>
-    <td><input [(ngModel)]="row.lastName" style="color:black"></td>
-  </tr>
-  </tbody>
-</table>
+
+
+<!-- data table  -->
+<perfect-scrollbar style="max-width: 100%; max-height: 400px;" [config]="config">
+  <table datatable [dtOptions]="dtOptions" class="row-border hover">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let person of data">
+            <td>{{ person.id }}</td>
+            <td>{{ person.name }}</td>
+            <td>{{ person.lastName }}</td>
+          </tr>
+      <tr>
+        <td>1</td>
+        <td>Foo</td>
+        <td>Bar</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Someone</td>
+        <td>Youknow</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Iamout</td>
+        <td>Ofinspiration</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Yoda</td>
+        <td>Skywalker</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Patrick</td>
+        <td>Dupont</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>Barack</td>
+        <td>Obama</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>François</td>
+        <td>Holland</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>Michel</td>
+        <td>Popo</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Chuck</td>
+        <td>Norris</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>Simon</td>
+        <td>Robin</td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td>Louis</td>
+        <td>Lin</td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td>Zelda</td>
+        <td>Link</td>
+      </tr>
+    </tbody>
+  </table>
+  
+</perfect-scrollbar>
+
   
 <br><br>
   <carousel>
@@ -126,6 +194,20 @@
     This is a modal.
   </div>
 </ng-template>
+
+<br>
+<highcharts-chart 
+  [Highcharts]="Highcharts"
+
+  [constructorType]="chartConstructor"
+  [options]="chartOptions"
+  [callbackFunction]="chartCallback"
+
+  [(update)]="updateFlag"
+  [oneToOne]="oneToOneFlag"
+
+  style="width: 100%; height: 400px; display: block;"
+></highcharts-chart>
 
 
 
