--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
 .multiselect-dropdown {position: relative; width: 31% !important;}
+
+
+.tick text {
+    font-size: 12px;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #4C5554;
+    stroke-width: 1;
+}
+
+.x.axis .tick line {
+    display: none
+}
+
+.domain {
+    display: block !important;
+    stroke: #4C5554 !important;
+    stroke-width: 2 !important;
+}
+.legend {
+    font-size: 12px;
+    font-family: sans-serif;
+    
+}
