Added bubble chart and Pie Donut chart

--- a/src/app/common/components/d3-graph/d3-graph.component.html
+++ b/src/app/common/components/d3-graph/d3-graph.component.html
@@ -1,7 +1,10 @@
 <p>
   d3-graph!
 </p>
-<angular-d3-donut [id]="donutChartId" [data]="donutChartData"></angular-d3-donut>
+<div class=" shadow p-3 mb-5 bg-white rounded ">
+    <angular-d3-donut [id]="donutChartId" [data]="donutChartData"></angular-d3-donut>
+</div>
+
 
 
 <!-- <angular-d3-bar [id]="barChartId" [data]="barChartData"></angular-d3-bar>   -->
