--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -196,7 +196,7 @@
 </ng-template>
 
 <br>
-<highcharts-chart 
+<!-- <highcharts-chart 
   [Highcharts]="Highcharts"
 
   [constructorType]="chartConstructor"
@@ -207,7 +207,7 @@
   [oneToOne]="oneToOneFlag"
 
   style="width: 100%; height: 400px; display: block;"
-></highcharts-chart>
+></highcharts-chart> -->
 
 
 
