--- a/src/app/common/components/high-chart/high-chart.component.html
+++ b/src/app/common/components/high-chart/high-chart.component.html
@@ -3,7 +3,7 @@
 </p>
 
 
-<highcharts-chart 
+<!-- <highcharts-chart 
   [Highcharts]="Highcharts"
 
   [constructorType]="chartConstructor"
@@ -14,5 +14,20 @@
   [oneToOne]="oneToOneFlag"
 
   style="width: 100%; height: 400px; display: block;"
-></highcharts-chart>
+></highcharts-chart> -->
+
+<div class="row">
+  <div class="col-md-6 shadow p-3 mb-5 bg-white rounded "  style="margin-left: 45px">
+    <button (click)="add()" class="btn btn-primary">Add Point!</button>
+    <div [chart]="chart"></div>
+  </div>
+  <div class="col-md-5 shadow p-3 mb-5 bg-white rounded pull-right" style="margin: 10px">
+    <div id="container"></div>
+  </div>
+  <div class="col-md-12 shadow p-3 mb-5 bg-white rounded pull-right" style="margin: 20px">
+    <div id="container1"></div>
+  </div>
+  <div  class="col-md-12 shadow bg-white rounded" [chart]="stock" style="margin: 20px"></div>
+
+</div>
 
