--- a/src/app/common/share-components/side-bar/side-bar.component.html
+++ b/src/app/common/share-components/side-bar/side-bar.component.html
@@ -32,10 +32,10 @@
       </a>
 
       <div class="nested-menu">
-        <a class="list-group-item" (click)="addExpandClass('pages')">
+        <a class="list-group-item" (click)="chartToggle = !chartToggle">
           <span><i class="fa fa-line-chart"></i>&nbsp;Charts</span>
         </a>
-        <li class="nested" [class.expand]="showMenu === 'pages'">
+        <li class="nested" [class.expand]="chartToggle">
             <ul class="submenu">
               <li >
                 <a [routerLink]="['/high-chart']" [routerLinkActive]="['router-link-active']" class="list-group-item">
