--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -18,7 +18,6 @@
 <br><br>
 <angular-file-uploader 
       [config]="afuConfig"
-      [resetUpload]=resetVar
       (ApiResponse)="DocUpload($event)">
 </angular-file-uploader>
 <br><br>
@@ -72,7 +71,8 @@
 
 
 <!-- data table  -->
-<perfect-scrollbar style="max-width: 100%; max-height: 400px;" [config]="config">
+<perfect-scrollbar style="max-width: 100%; max-height: 400px;" 
+>
   <table datatable [dtOptions]="dtOptions" class="row-border hover">
     <thead>
       <tr>
