--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
 .multiselect-dropdown {position: relative; width: 31% !important;}
-
+@import "bootstrap-social.less";
 
 .tick text {
     font-size: 12px;
