--- a/src/app/common/components/file-upload/file-upload.component.html
+++ b/src/app/common/components/file-upload/file-upload.component.html
@@ -14,3 +14,13 @@
 <input type="file" (change)="fileEvent($event)">
 <br><br>
 <img *ngIf="!!base64textString" width="200" height="200" class="uploadPhotoBx default" [src]="'data:image/jpg;base64,' + base64textString | safe">
+
+<br>
+<br>
+<button [disabled]="!onSuccess" class="btn btn-primary" (click)='resetDropzoneUploads()'>Reset upload area</button>
+
+
+<div align="center" style="width: 200px;height:400px">
+  <dropzone [config]="config" width="200" height="200" [message]="'Click or drag images here to upload'" (error)="onUploadError($event)" (success)="onUploadSuccess($event)"></dropzone>
+</div>
+ 
