--- a/src/app/common/share-components/nav-bar/nav-bar.component.html
+++ b/src/app/common/share-components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-            <li> <a  routerLink="/social-login" style="text-decoration: none;" class=" white-text"
+            <li> <a  routerLink="/auth/social-login" style="text-decoration: none;" class=" white-text"
                >
                 <i class="fa fa-sign-in" aria-hidden="true"></i> Social login&nbsp;&nbsp;&nbsp;&nbsp;
             </a>
@@ -24,7 +24,7 @@
                     <a class="dropdown-item" href="javascript:0;" (click)="signOut()">
                         <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' }}
                     </a>
-                    <a class="dropdown-item" routerLink="/social-login">
+                    <a class="dropdown-item" routerLink="/auth/login">
                         <i class="fa fa-sign-in"></i> {{ 'Login' }}
                     </a>
                 </div>
